@@ -4,6 +4,7 @@ releases are sorted from youngest to oldest.
 version <next>:
 - VDPAU hardware acceleration through normal hwaccel
 - SRTP support
+- Error diffusion dither in Swscale
 
 
 version 1.1:
